--- a/css/pages/_front-page.scss
+++ b/css/pages/_front-page.scss
@@ -183,9 +183,9 @@
             }
             
             .glider-next {
-                right: -50px;
+                right: -40px;
             }
-
+            //1050px
             @media screen and (max-width: 768px) {
                 .glider-arrow-container {
                     position: relative;
